# Game-of-Life

./: .gitignore  CMakeLists.txt  README.md
debug/: CMakeCache.txt  HelloWorld  Makefile  cmake_install.cmake
src/: Board.cpp  Board.h  Button.cpp  Button.h  Constants.h  Coordinates.h  GameManager.cpp  GameManager.h  SDLManager.cpp  SDLManager.h  SaveFileManager.cpp  SaveFileManager.h  main.cpp  test1.cpp  test1.h
